--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Juego de switches de trenes",
   "start_url": "/trenes/",
   "display": "standalone",
-  "orientation": "portrait",
+  "orientation": "portrait-primary",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
   "icons": [
